

[workspace]
members = [ 
    "rust-practice",
]


[workspace.package]
version = "0.1.0" 


[workspace.dependencies]

anyhow = "=1.0.83"
thiserror = "=1.0.59"

tokio = { version = "=1.36.0", features = ["full"] }
tokio-util = {version = "=0.7.10", features = ["full"]}
tokio-stream = { version = "=0.1.15", features = ["sync", "net"] }
tokio-rustls = "=0.25.0"
rustls = "=0.23.2"

futures = "=0.3.30"
bytes = "=1.5.0"
parking_lot = "=0.12.1"

tracing = { version = "=0.1.40", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.18", features = ["local-time", "env-filter"]}
tracing-appender = "=0.2.3"
time = {version = "=0.3.34", features = ["formatting", "macros"]}

axum = { version = "=0.7.4", features = ["ws"] }
hyper = "=1.1.0"
# tower-service = "=0.3.2"
serde = {version = "=1.0.200", features = ["derive"]}
serde_json = "=1.0.116"

# redis = {version = "=0.25.2", features = []}
# redis = { version = "=0.25.3", features = ["tokio-comp", "json"] }
redis = { version = "=0.25.3", features = [ "cluster-async", "tokio-comp", "json", "sentinel" ] }

# tonic = "=0.11.0"
# tonic-build = "=0.11.0"
# prost = "=0.12.4"
uuid = {version = "=1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
pretty-hex = "=0.4.1"

tokio-tungstenite = "=0.21.0"
async-trait = "=0.1.80"
chrono = "=0.4.38"
deadpool = "=0.12.1"
# TinyUFO = "=0.2.0"
# pingora-memory-cache = "=0.2.0"
crossbeam-queue = "=0.3.11"
indexmap = "=2.2.6"
# moka = {version = "=0.12.7", features = ["sync"]}
bit-iter = "=1.2.0"
dashmap = "=5.5.3"


# strum = "=0.26.2"
# strum_macros = "=0.26.2"

# enumflags2 = "=0.7.7"
# tynm = "=0.1.10"
# config = "=0.14.0"


