[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = { workspace = true, optional = false }
thiserror = { workspace = true, optional = false }

tokio = { workspace = true, optional = false}
tokio-util = { workspace = true, optional = false }
tokio-stream = { workspace = true, optional = false }
tokio-rustls = { workspace = true, optional = false }
rustls = { workspace = true, optional = false }
futures = { workspace = true, optional = false }

bytes = { workspace = true, optional = false }

parking_lot = { workspace = true, optional = false }

tracing = { workspace = true, optional = false }
tracing-subscriber = { workspace = true, optional = false }
tracing-appender = { workspace = true, optional = false }
time = { workspace = true, optional = false }

axum = { workspace = true, optional = false }
hyper = { workspace = true, optional = false }
# tower-service = { workspace = true, optional = false }
serde = { workspace = true, optional = false }
serde_json = { workspace = true, optional = false }

redis = { workspace = true, optional = false }
# tonic = { workspace = true, optional = false }
# prost = { workspace = true, optional = false }

uuid = { workspace = true, optional = false }
pretty-hex = { workspace = true, optional = false }

tokio-tungstenite = { workspace = true, optional = false }
async-trait = { workspace = true, optional = false }
chrono = { workspace = true, optional = false }
deadpool = { workspace = true, optional = false }
# TinyUFO = { workspace = true, optional = false }
# pingora-memory-cache = { workspace = true, optional = false }
crossbeam-queue = { workspace = true, optional = false }
indexmap = { workspace = true, optional = false }
# moka = { workspace = true, optional = false }
bit-iter = { workspace = true, optional = false }
dashmap = { workspace = true, optional = false }
# tynm = { workspace = true, optional = false }
# config = { workspace = true, optional = false }

